--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 	<application
-		android:icon="@drawable/ic_launcher"
+		android:icon="@drawable/icon_main"
 		android:label="Work Buddy" >
 		
 		<activity
